--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <img src="img/flyer06.jpg" alt="">
             <img src="img/flyer07.jpg" alt="">
             <img src="img/flyer08.jpg" alt="">
+            <img src="img/flyer09.jpg" alt="">
           </div>
 
           <h3>BANNERS</h3>
